--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "localhost:6379"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   }
 }
